@@ -393,6 +393,11 @@ be lower case.
 Comma separated options identifying communication options.
 .RS
 .TP 15
+\fBCheckGhalQuiesce\fR
+Used specifically on a Cray using an Aries Ghal interconnect.  This will check
+to see if the system is quiescing when sending a message, and if so, we wait
+until it is done before sending.
+.TP
 \fBNoCtldInAddrAny\fR
 Used to directly bind to the address of what the node resolves to running
 the slurmctld instead of binding messages to any address on the node,
