@@ -27,6 +27,7 @@ documents those changes that are of interest to users and administrators.
     prevents the PTY subsystem from inserting extraneous \r characters into
     the output stream.
  -- Change the column name for the %U (User ID) field in squeue to 'UID'.
+ -- CRAY - Add CheckGhalQuiesce to the CommunicationParameters.
 
 * Changes in Slurm 18.08.0pre1
 ==============================
